--- a/source/blocks/order/order.scss
+++ b/source/blocks/order/order.scss
@@ -110,6 +110,10 @@
   padding: 13px;
   font-size: 18px;
   line-height: 24px;
+
+  &:focus:not(:focus-visible) {
+    outline: none;
+  }
 }
 
 @media (min-width: 530px) {
@@ -160,10 +164,6 @@
 
   .order__personal-data > .order__personal-item {
     width: 33.33%;
-
-    &:not(:first-child) {
-      border-left: none;
-    }
   }
 
   .order__customer-contacts > .order__contacts-item:not(:first-child) {
@@ -235,7 +235,6 @@
 
   .order__personal-data > .order__personal-item:not(:first-child) {
     margin-left: 35px;
-    border: 1px solid #e5ddd5;
   }
 
   .order__customer-contacts > .order__contacts-item {
@@ -243,7 +242,6 @@
 
     &:not(:first-child) {
       margin-left: 35px;
-      border-left: 1px solid #e5ddd5;
     }
   }
 
