--- a/source/blocks/reviews/reviews.scss
+++ b/source/blocks/reviews/reviews.scss
@@ -46,6 +46,8 @@
 }
 
 .reviews__author-image {
+  width: 50px;
+  height: 50px;
   border: 1px solid #e5ddd5;
 }
 
@@ -137,6 +139,8 @@
   }
 
   .reviews__author-image {
+    width: 80px;
+    height: 80px;
     border: none;
     border-radius: 50%;
   }
@@ -256,6 +260,8 @@
   }
 
   .reviews__author-image {
+    width: 249px;
+    height: 160px;
     border-radius: 0;
   }
 
